crystal-facet-uml (1.63.2) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * ...

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sat, 29 Mar 2025 08:00:00 +0100

crystal-facet-uml (1.63.1) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * in sequence charts, labels of relationships are closer to the x-center
  * relationships may trespass parents/ancestors of their from/to nodes

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sat, 22 Mar 2025 08:00:00 +0100

crystal-facet-uml (1.63.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * scripts added to build for Windows(TM) using msys2
  * no fancy names for new objects, only New Diagram, New Element, New Feature
  * snapping distance increased for snapping classifiers to grid
  * layouting of relationship labels consider the surrouding space
    layout_good_cases         ERR=0,  W/C=8,    W/F=1,   W/L=25,   W/R=79
    layout_challenging_cases  ERR=44, W/C=9751, W/F=509, W/L=6720, W/R=7777

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sat, 08 Mar 2025 18:30:00 +0100

crystal-facet-uml (1.62.3) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * bugfix for layouting issue: line intersects were ignored in 1.62.2

 -- Andreas Warnke <cfu@andreaswarnke.de>  Wed, 29 Jan 2025 18:30:00 +0100

crystal-facet-uml (1.62.2) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * Layouting improved when classifier contains itself; less errors:
  * layouting further modified by adjusting debts
    OLD layout_good_cases:       ERR=3,  W/C=9,    W/F=3,   W/L=25,   W/R=71
    OLD layout_challenging_cases ERR=37, W/C=9433, W/F=531, W/L=6622, W/R=7844
    NEW layout_good_cases        ERR=0,  W/C=8,    W/F=2,   W/L=25,   W/R=64
    NEW layout_challenging_cases ERR=32, W/C=9710, W/F=510, W/L=6716, W/R=8492
    The diagrams look more orderly - even if this is not reflected in the stats

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sun, 26 Jan 2025 15:30:00 +0100

crystal-facet-uml (1.62.1) UNRELEASED; urgency=medium

  [ Andreas Warnke ]